--- a/ecommerce_outlet_app_565/pubspec.yaml
+++ b/ecommerce_outlet_app_565/pubspec.yaml
@@ -27,8 +27,12 @@ dependencies:
 
   cupertino_icons: ^1.0.0
 
-  #Firebase Denpendencies
+  # Firebase Denpendencies
   firebase_core: "0.5.2+1"
+  firebase_auth: "^0.18.3+1"
+
+  # Google fonts
+  google_fonts: ^1.1.1
 
 dev_dependencies:
   flutter_test:
