--- a/ecommerce_outlet_app_565/pubspec.yaml
+++ b/ecommerce_outlet_app_565/pubspec.yaml
@@ -40,10 +40,8 @@ dev_dependencies:
 
 
 flutter:
-
-
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+
+assets:
+   - assets/images/
